# sacre_tech_30_05_24_grpc

./: Makefile  dart.Dockefile.dockerignore  dart.Dockerfile  docker-compose.yaml  go.Dockerfile  go.Dockerfile.dockerignore  node-dyn.Dockerfile  node-dyn.Dockerfile.dockerignore  node-static.Dockerfile  node-static.Dockerfile.dockerignore  python.Dockerfile.dockerignore
dart/: .gitignore  pubspec.yaml
dart/lib/src/: client.dart  server.dart
demo/: keyword.proto  person.json  person.proto  person.serialized.txt  sample.proto  type-frequent.proto  type-rare.proto
dev/docker/: dart.Dockerfile.dockerignore  go.Dockerfile.dockerignore  node-dyn.Dockerfile  node-dyn.Dockerfile.dockerignore  node-static.Dockerfile  node-static.Dockerfile.dockerignore  python.Dockerfile  python.Dockerfile.dockerignore  ruby.Dockerfile  ruby.Dockerfile.dockerignore  rust.Dockerfile  rust.Dockerfile.dockerignore
dev/infra/certs/: gen_cert.sh
dev/infra/config/: certificates.yml  traefik.yml
go/: .gitignore  Makefile  go.mod  go.sum
go/cmd/client/: main.go
node/: client.js  package.json  pnpm-lock.yaml  server.js  static_client.js  static_server.js
php/: .gitignore  Makefile  proto-maker.Dockerfile  proto-maker.Dockerfile.dockerignore  proto-maker.Makefile  temp.php
php/.devcontainer/: devcontainer.json  postCreateCommand.sh
php/grpc_client/: .env  Makefile  composer.json  docker-compose.yml
proto_files/: request.proto  response.proto  service.proto
python/: client.py  server.py
ruby/: client.rb  server.rb
rust/: Cargo.toml  build.rs
rust/src/: client.rs  server.rs
(+22 files in other folders)
