[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-server"
path = "src/server.rs"

[[bin]]
name = "rust-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost-types = "0.12"
spfunc = "0.1.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11"
